--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
-body
-{
-    background-color: #C99E10;
+body {
+    background-color: #FBE8A6;
     padding: 0;
     margin: 0;
     -moz-user-select: none;
     user-select:none;
-
 }
 
 
-header
-{
+header {
     width:100%;
     height:50px;
     background-image: linear-gradient(to bottom, #141015, #363237);
 }
 
 
-footer
-{
+footer {
     background-image: linear-gradient(to bottom, #141015, #363237);
     height: 50px;
     position: fixed;
@@ -28,19 +24,16 @@ footer
     text-align: right;
 }
 
-#github
-{
+#github {
     text-decoration: none;
     color:lightyellow;
 }
 
-#github:hover
-{
+#github:hover {
     color: darkcyan;
 }
 
-#title
-{
+#title {
     font-size:25px;
     color: #ddb500;
     text-align:left;
@@ -53,23 +46,21 @@ footer
     text-decoration:none;
 }
 
-#title a{
+#title a {
     text-decoration: none;
     color: #ddb500;
     text-shadow: 1px 1px 2px darkred;
     font-family: 'Pacifico', cursive;
 }
 
-#topMenu
-{
+#topMenu {
     background-color: #363237;
     height:50px;
     width: 100%;
 }
 
 
-#parallelogram
-{
+#parallelogram {
     animation-name:"ShowParallelogram"; /* Nazwa animacji*/
     animation-duration:1s; /* Czas trwania animacji*/
     animation-iteration-count:1; /* Ile razy wykona się animacja?*/
@@ -95,16 +86,14 @@ footer
 }
 
 
-@keyframes ShowParallelogram
-{
+@keyframes ShowParallelogram {
     0% { width: 1%;}
     100% { width:60%; }
     100% {font-size: 1.5vw;}
 }
 
 
-#logButton
-{
+#logButton {
     background-color:#6E646F;
     border: none;
     border-radius: 8px;
@@ -121,40 +110,44 @@ footer
 }
 
 
-#logButton:hover
-{
+#logButton:hover {
     background-color:#5D535E;
     height:35px;
     width: 130px;
     cursor: pointer;
 }
 
-.imgcontainer
-{
+.imgcontainer {
     position:relative;
 }
 
-.imgmenu
-{
+.imgmenu {
     position:relative;
     border-radius:30px;
     width: 40%;
     height:200px;
-    margin: 0 auto 5px 30%; /*top right bottom left*/
+    margin: 0 auto 5px 30%;
     cursor:pointer;
 }
 
-
-.imgtext
-{
+.imgtext {
     position: absolute;
     bottom: 20%;
-    width:100%;
+    width: 100%;
     margin: 0 auto;
-    text-align:center;
-    font-size:25px;
-    color:lightyellow;
+    text-align: center;
+    font-size: 25px;
+    color: lightyellow;
     font-family: sans-serif;
     text-shadow: 3px 3px 1px black;
+}
 
+#container
+{
+    width:80%;
+    margin: 0 auto;
+    background-image: linear-gradient(to bottom, #585459, #363237);
+    color:#DAAF21;
+    padding: 10px 20px 30px 20px;
+    border-radius:30px;
 }
