* Add admin panel - adding/deleting locations, articles; templates for some new functions * Add login/logout system, two types of users - admin and normal user; admin has more functions than normal user * Send messages to admins * Guide which contains advanced search system. User can read informations about all locations in DB * About us - informations about application * Articles - user can read articles. It is possible to read articles from only one category or only one author. * Some other features * Some templates for new functions - work still in progress!

--- a/kontakt/style_2.css
+++ b/kontakt/style_2.css
@@ -58,3 +58,36 @@ textarea {
 #submitMessage:hover {
     background-color: #C99E10;
 }
+
+
+.send-info {
+    width:60%;
+    background-color: #ccbb7b;
+    border-radius:50px;
+    padding:20px 30px 20px 30px;
+    margin: 0 auto;
+}
+
+.send-title {
+    font-size:18px;
+    color: #292929;
+    text-align:center;
+    font-weight:600;
+    margin-bottom:30px;
+}
+
+.send-return {
+    background-color: #DAAF21;
+    border-radius:20px;
+    border:none;
+    padding:8px 20px 8px 20px;
+    width: 40%;
+    text-align:center;
+    font-size:20px;
+    cursor:pointer;
+    margin: 0 auto;
+}
+
+.send-return:hover {
+    background-color: #C99E10;
+}
