--- a/aktualnosci/artykul/style_artykul.css
+++ b/aktualnosci/artykul/style_artykul.css
@@ -5,7 +5,7 @@
     border-radius: 20px;
     padding: 10px 20px 10px 20px;
     background-color: #ccbb7b;
-    color: #292929
+    color: #292929;
 }
 
 .article_title {
