* Add events system to app: * Add advanced searching for events. * Add 10-newest events list. * Add event details. * User can add event to favourite * User can delete event from favourites by his profile-settings. * Show event info on location * Set event-menu visible only for logged users. * Add add/delete event system on admin panel.

--- a/adminpanel/style_admin.css
+++ b/adminpanel/style_admin.css
@@ -286,3 +286,12 @@ textarea {
  margin: 0 auto !important;
 }
 .photo-flex > img { object-fit:cover !important; max-width:300px !important; max-height:100px !important}
+
+.info {
+    text-align:center;
+    font-size:16px;
+    color:red !important;
+    font-weight:bold;
+    font-family:Ubuntu;
+    display:none;
+}
