--- a/guide/style_guide.css
+++ b/guide/style_guide.css
@@ -429,3 +429,14 @@ a {
 .guide-map:hover {
     background-color: #007100;
 }
+
+.event {
+    text-align:center;
+    font-weight:600;
+    font-size:16px;
+}
+
+.event:hover {
+    background-color: #ccbb7b;
+    cursor:pointer;
+}
