--- a/aktualnosci/style_aktualnosci.css
+++ b/aktualnosci/style_aktualnosci.css
@@ -83,3 +83,9 @@ a:hover {
     font-weight: bold;
     text-align:center;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .article { width:85%;}
+
+}
