--- a/guide/style_guide.css
+++ b/guide/style_guide.css
@@ -139,6 +139,8 @@ input, select {
     padding: 5px;
     font-weight:600;
     overflow:hidden;
+    visibility:hidden;
+    display:none;
 
 }
 
@@ -165,8 +167,10 @@ a {
     min-width:240px;
     background-color:#292929;
     float:left;
-    position:relative;
+    position:inherit;
     max-height:40%;
+    clear:both;
+
 }
 
 .photo-big > img { min-width:240px !important; min-height:160px !important; max-width:300px !important; max-height:40% !important}
@@ -440,3 +444,41 @@ a {
     background-color: #ccbb7b;
     cursor:pointer;
 }
+
+.photobutton {
+    padding:5px 20px 5px 20px;
+    background-color: #0da4e0;
+    font-size:16px;
+    font-weight:600;
+    font-family:Ubuntu;
+    text-align:center;
+    float:left;
+    position:relative;
+    margin-left:10px;
+    border:2px solid black;
+    margin-top:10px;
+    border-radius:10px;
+    clear:both;
+}
+
+.photobutton:hover {
+    background-color: #0b82c0;
+    cursor:pointer;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .guide-container { padding:20px; width:85%}
+    #col1 { display:none}
+    #col2 { display:none}
+    .search-container { width:90% }
+    .guide-details { margin: 10px auto; float: unset}
+    .location-container { width:85%}
+    .photo-big-container { float:unset; display:block; text-align:center; background-color: #ccbb7b; border:none; margin: 10px auto}
+    .guide-description { width:80%; float:right; margin: 10px auto}
+    .photobutton { float:unset; display:block; margin: 10px auto; height:25px;}
+    .guide-description { float:unset; margin: 10px auto; }
+    .guide-comment-container { width:100%; float:unset; margin: 10px auto}
+    .guide-map { float:unset; margin: 0 auto; width:80%}
+    .guide-favourite { float:unset; margin: 0 auto; width:80%}
+ }
