--- a/login/style_login.css
+++ b/login/style_login.css
@@ -83,3 +83,12 @@ a { text-decoration:none }
     margin:0 auto;
     padding:5px;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .login-row {display:block}
+    .login-info-text { float:left; clear:both; font-size:16px}
+    .login-info-input>input {  float:right; font-size:16px ;width:200px !important}
+    .submit { width:100%}
+    .login-container { padding:20px; width:85%}
+}
