--- a/profile/style_profile.css
+++ b/profile/style_profile.css
@@ -158,3 +158,7 @@
     cursor:pointer;
     color:whitesmoke;
 }
+
+@media only screen and (max-width: 600px) {
+    .profile-button { width:auto; height:auto; padding:5px auto 5px auto}
+}
