--- a/profile/style_profile.css
+++ b/profile/style_profile.css
@@ -159,6 +159,39 @@
     color:whitesmoke;
 }
 
+.formdistance {
+    margin: 0 auto;
+    text-align:center;
+    width:50%;
+}
+
+.inputdistance {
+    background-color: #bb9300;
+    font-size:20px;
+    color: #292929;
+    border: 1px solid #bb9300;
+    border-radius:20px;
+    margin: 0 auto;
+    text-align:center;
+}
+.inputbuttondistance {
+    background-color: #bb9300;
+    font-size:20px;
+    border-radius:20px;
+    padding:5px;
+    display:block;
+    width:40%;
+    margin: 10px auto;
+    border: 1px solid #bb9300;
+}
+
+.profile-distancetitle {
+    margin: 0 auto 5px;
+    color: #bb9300;
+    font-weight:600;
+    font-size:20px;
+    text-align:center;
+}
 @media only screen and (max-width: 600px) {
     .profile-button { width:auto; height:auto; padding:5px auto 5px auto}
 }
