--- a/trip/style_trip.css
+++ b/trip/style_trip.css
@@ -161,3 +161,20 @@
     cursor:pointer;
     color: #EEED9D;
 }
+
+.button-removetrip {
+    background-color: #ab3a3a;
+    color: whitesmoke;
+    font-weight:600;
+    height:auto;
+    width:auto;
+    padding:10px;
+    border-radius:10px;
+    text-align:center;
+}
+
+.button-removetrip:hover {
+    background-color: #891818;
+    cursor:pointer;
+    color: #EEED9D;
+}
